<?xml version="1.0" encoding="UTF-8"?>
<resources>
<!--    <string name="app_name" translatable="false">Live Streaming</string>-->

    <!-- Main Activity -->
    <string name="start_broadcast_title">Start Preview</string>
    <string name="topic_edit_hint">Pick a topic to chat</string>
    <string name="powered_by_agora" translatable="false">Powered by agora.io</string>
    <string name="need_necessary_permissions">Necessary permissions acquired</string>
    <string name="main_capture_mode_camera">Camera Capture</string>
    <string name="main_capture_mode_screen">Screen Capture</string>
    <string name="main_capturing_screen_warning">The screen capture service is running, please operate from the notification bar!</string>

    <!-- Setting Activity -->
    <string name="setting_title">Settings</string>
    <string name="setting_rtmp_title">RTMP publish URL</string>
    <string name="setting_resolution_title">Video Resolution</string>
    <string name="setting_resolution_ratio_title">Video Resolution Ratio</string>
    <string name="setting_resolution_definition_title">Video Resolution Definition</string>
    <string name="setting_framerate_title">Video Frame Rate</string>
    <string name="setting_video_bitrate_title">Video Bitrate (Kbps)</string>
    <string name="setting_video_orientation_mode_title">Video Orientation Mode</string>
    <string name="setting_screen_orientation_title">Screen Orientation</string>
    <string name="setting_audio_sample_rate_title">Audio Sample Rate (KHz)</string>
    <string name="setting_audio_type_title">Audio Type</string>
    <string name="setting_audio_bitrate_title">Audio Bitrate (Kbps)</string>
    <string name="setting_log_share_title">Click to share logs</string>
    <string name="setting_log_path_title">Logs Path</string>
    <string name="setting_log_filter_title">Logs Level</string>
    <string name="setting_stream_type_title">Stream Type</string>
    <string name="setting_stats_title">Show video statistics</string>
    <string name="setting_mirror_encode_title">Local video encode mirror mode</string>
    <string name="setting_mirror_local_title">Local video preview mirror mode</string>
    <string name="setting_mirror_remote_title">Remote video render mirror mode</string>
    <string name="setting_mirror_push_stream_title">Push stream mirror mode</string>

    <string-array name="string_array_resolutions">
        <item>320x240</item>
        <item>480x360</item>
        <item>640x360</item>
        <item>640x480</item>
        <item>960x540</item>
        <item>1280x720</item>
    </string-array>

    <!-- Live Activity -->
    <string name="fake_user_name" translatable="false">Shakespeare</string>
    <string name="start_rtmp_streaming">Start RTMP streaming</string>
    <string name="switch_to_rtmp_streaming">Switch to RTMP streaming</string>
    <string name="switch_to_agora_channel">Switch to Agora channel</string>
    <string name="switch_to_screen_capture">Switch to Screen Capture</string>
    <string name="switch_resolution">Switch Res</string>

    <!-- Role Choose Activity -->
    <string name="select_role_title">Please choose your role</string>
    <string name="select_role_broadcaster">Broadcaster</string>
    <string name="select_role_audience">Audience</string>
    <string name="select_role_broadcaster_hint">Join as broadcaster</string>
    <string name="select_role_audience_hint">Join as audience</string>

    <!-- Legal digits for channel names -->
    <string name="legal_channel_name_characters" translatable="false">&#xA0;abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789!#$%&amp;()+,-:;&lt;=.>?@[]^_`{|}~</string>

    <!-- face beauty -->
    <string name="fu_base_is_tracking_text">No Face Tracking</string>
    <string name="fu_face_tracking_time_tips">Face tracking may take a while</string>
    <string name="setting_screen_ratio_title">Screen ration</string>
    <string name="setting_video_local_store_title">Video local store</string>

    <!-- operation menu title -->
    <string name="switch_screen_share_title">Switch screen share</string>
    <string name="switch_screen_ration_title">Switch Screen Ration</string>
    <string name="snapshot_video_frame_title">Snapshot</string>
    <string name="operation_collection_title">Operation</string>
    <string name="stop_screen_share_title">Stop screen share</string>

    <!--  service  -->
    <string name="btn_screen_capture_start_rtmp">Push\nRTMP</string>
    <string name="btn_screen_capture_start_rtc">Push\nAgora\nChannel</string>
    <string name="btn_screen_capture_snapshot">Snapshot</string>
    <string name="btn_screen_capture_stop">Stop</string>
    <string name="status_text_default">Screen\nCapture</string>

    <!--  snapshot  -->
    <string name="save_pic_success">Save the picture successfully</string>
    <string name="save_pic_failed">Failed to save picture</string>
</resources>
