<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">

    <io.agora.demo.streaming.ui.VideoGridContainer
        android:id="@+id/live_video_grid_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </io.agora.demo.streaming.ui.VideoGridContainer>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <io.agora.demo.streaming.ui.AgoraSurfaceView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/live_image_view">
        </io.agora.demo.streaming.ui.AgoraSurfaceView>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/live_room_top_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/live_top_layout_height"
        android:layout_alignParentTop="true">

        <ImageView
            android:layout_width="@dimen/live_leave_btn_size"
            android:layout_height="@dimen/live_leave_btn_size"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="6dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="@dimen/live_top_layout_margin"
            android:layout_marginEnd="@dimen/live_top_layout_margin"
            android:src="@drawable/btn_leave"
            android:scaleType="centerCrop"
            android:background="@drawable/rounded_bg_half_transparent"
            android:onClick="onLeaveClicked"/>

        <Button
            android:id="@+id/operation_pop_menu"
            android:layout_width="80dp"
            android:layout_height="36dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="6dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="70dp"
            android:padding="3dp"
            android:textSize="12sp"
            android:textColor="@color/start_broadcast_text_color"
            android:background="@drawable/start_broadcast_bg"
            android:text="@string/operation_collection_title"
            android:onClick="showPopMenu"
            />

        <RelativeLayout
            android:id="@+id/live_name_space_layout"
            android:layout_width="@dimen/live_name_board_width"
            android:layout_height="@dimen/live_name_board_height"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="@dimen/live_top_layout_margin"
            android:layout_marginStart="@dimen/live_top_layout_margin"
            android:background="@drawable/live_name_board_bg">
            <ImageView
                android:id="@+id/live_name_board_icon"
                android:layout_width="@dimen/live_name_board_icon_size"
                android:layout_height="@dimen/live_name_board_icon_size"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="@dimen/live_name_board_icon_margin"
                android:layout_marginStart="@dimen/live_name_board_icon_margin"
                android:layout_centerVertical="true"
                android:scaleType="centerCrop"/>
            <ImageView
                android:id="@+id/fav_icon"
                android:layout_width="@dimen/live_name_board_fav_icon_size"
                android:layout_height="@dimen/live_name_board_fav_icon_size"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/live_name_board_fav_icon_margin"
                android:layout_marginStart="@dimen/live_name_board_fav_icon_margin"
                android:layout_marginRight="@dimen/live_name_board_fav_icon_margin"
                android:layout_marginEnd="@dimen/live_name_board_fav_icon_margin"
                android:src="@drawable/ic_fav"
                android:background="@drawable/live_name_board_fav_bg"/>
            <TextView
                android:id="@+id/live_room_name"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/live_name_text_height"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@id/live_name_board_icon"
                android:layout_toEndOf="@id/live_name_board_icon"
                android:layout_toLeftOf="@id/fav_icon"
                android:layout_toStartOf="@id/fav_icon"
                android:layout_marginLeft="@dimen/live_name_text_margin_left"
                android:layout_marginStart="@dimen/live_name_text_margin_left"
                android:textAlignment="gravity"
                android:gravity="bottom"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_medium"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"/>
            <TextView
                android:id="@+id/live_room_broadcaster_uid"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/live_name_text_height"
                android:layout_toRightOf="@id/live_name_board_icon"
                android:layout_toEndOf="@id/live_name_board_icon"
                android:layout_below="@id/live_room_name"
                android:layout_toLeftOf="@id/fav_icon"
                android:layout_toStartOf="@id/fav_icon"
                android:layout_marginLeft="@dimen/live_name_text_margin_left"
                android:layout_marginStart="@dimen/live_name_text_margin_left"
                android:textAlignment="gravity"
                android:gravity="top"
                android:text="@string/fake_user_name"
                android:textColor="@color/gray_lightest"
                android:textSize="@dimen/text_size_small"/>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottom_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/live_bottom_layout_margin">
        <ImageView
            android:id="@+id/live_btn_switch_camera"
            android:layout_width="@dimen/live_bottom_btn_size"
            android:layout_height="@dimen/live_bottom_btn_size"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="@dimen/live_bottom_btn_margin"
            android:layout_centerVertical="true"
            android:src="@drawable/btn_switch_camera"
            android:scaleType="centerCrop"
            android:background="@drawable/rounded_bg_full_transparent"
            android:onClick="onSwitchCameraClicked"/>
        <ImageView
            android:id="@+id/live_btn_beautification"
            android:layout_width="@dimen/live_bottom_btn_size"
            android:layout_height="@dimen/live_bottom_btn_size"
            android:layout_toEndOf="@id/live_btn_switch_camera"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/live_bottom_btn_margin"
            android:src="@drawable/btn_beauty"
            android:scaleType="centerCrop"
            android:background="@drawable/rounded_bg_full_transparent"
            android:onClick="onBeautyClicked"/>
        <Button
            android:id="@+id/btn_rtmp_streaming"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/live_bottom_btn_size"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/live_bottom_btn_margin"
            android:padding="5dp"
            android:textSize="12sp"
            android:text="@string/start_rtmp_streaming"
            android:textColor="@color/start_broadcast_text_color"
            android:background="@drawable/start_broadcast_bg"
            android:onClick="onStreamingBtnClicked"/>
        <ImageView
            android:id="@+id/live_btn_server_streaming"
            android:layout_width="@dimen/live_bottom_btn_size"
            android:layout_height="@dimen/live_bottom_btn_size"
            android:layout_toStartOf="@id/live_btn_mute_audio"
            android:layout_centerVertical="true"
            android:src="@drawable/btn_push_stream"
            android:scaleType="centerCrop"
            android:visibility="gone"
            android:background="@drawable/rounded_bg_full_transparent"
            android:onClick="onServerStreamingClicked"/>
        <ImageView
            android:id="@+id/live_btn_mute_audio"
            android:layout_width="@dimen/live_bottom_btn_size"
            android:layout_height="@dimen/live_bottom_btn_size"
            android:layout_toStartOf="@id/live_btn_mute_video"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/live_bottom_btn_margin"
            android:src="@drawable/btn_mute_audio"
            android:scaleType="centerCrop"
            android:background="@drawable/rounded_bg_full_transparent"
            android:onClick="onMuteAudioClicked"/>
        <ImageView
            android:id="@+id/live_btn_mute_video"
            android:layout_width="@dimen/live_bottom_btn_size"
            android:layout_height="@dimen/live_bottom_btn_size"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/live_bottom_btn_margin"
            android:src="@drawable/btn_mute_video"
            android:scaleType="centerCrop"
            android:background="@drawable/rounded_bg_full_transparent"
            android:onClick="onMuteVideoClicked"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/beauty_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_container">

        <LinearLayout
            android:id="@+id/effect_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/effect_panel_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/percent50translucentBlack"
                android:orientation="vertical"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/effect_type_list"
                android:layout_width="match_parent"
                android:layout_height="@dimen/effect_type_item_height"
                android:background="@color/percent60translucentBlack" />
        </LinearLayout>

        <TextView
            android:id="@+id/iv_face_detect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/fu_base_is_tracking_text"
            android:textColor="@color/colorWhite"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/effect_desc_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/colorWhite"
            android:textSize="17sp"
            android:visibility="gone" />
    </RelativeLayout>
</RelativeLayout>
